<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_signin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GPA Calculator"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="5dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/aqwjpg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cumulative GPA"
            android:textSize="23sp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textSize="23sp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/orange_color"
            android:id="@+id/mainCGPATextView" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/semester_1"
            android:id="@+id/semesterOneButton"
            android:textStyle="bold"
            android:onClick="semesterOneButtonClicked"
            android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_2"
                android:id="@+id/semesterTwoButton"
                android:textStyle="bold"
                android:onClick="semesterTwoButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_3"
                android:id="@+id/semesterThreeButton"
                android:textStyle="bold"
                android:onClick="semesterThreeButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_4"
                android:id="@+id/semesterFourButton"
                android:textStyle="bold"
                android:onClick="semesterFourButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_5"
                android:id="@+id/semesterFiveButton"
                android:textStyle="bold"
                android:onClick="semesterFiveButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_6"
                android:id="@+id/semesterSixButton"
                android:textStyle="bold"
                android:onClick="semesterSixButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_7"
                android:id="@+id/semesterSevenButton"
                android:textStyle="bold"
                android:onClick="semesterSevenButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_8"
                android:id="@+id/semesterEightButton"
                android:textStyle="bold"
                android:onClick="semesterEightButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_9"
                android:id="@+id/semesterNineButton"
                android:textStyle="bold"
                android:onClick="semesterNineButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/semester_10"
                android:id="@+id/semesterTenButton"
                android:textStyle="bold"
                android:onClick="semesterTenButtonClicked"
                android:background="#01a7c2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/clear_all_data"
                android:id="@+id/clearAllDataButton"
                android:textStyle="bold"
                android:onClick="clearAllDataButtonClicked"
                android:background="#01a7c2"
                android:alpha="0.6"/>

    </LinearLayout>
</ScrollView>
    </android.support.design.widget.CoordinatorLayout>


